--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ email: tanvir.haider@nytimes.com
 update date: 08.28.2019
 version: 1
 platform: mobile web
+repo: https://github.com/tanvirhaider/DFP-TEMPLATE-DFP-Quartiles-FlexFrame-video-mobile-web
 -->
 
 <script type="text/javascript" src="mraid.js"></script>
